crates/reinhardt-core/macros/tests/ui/routes_registration/fail/unknown_argument.rs
use reinhardt_macros::routes;

#[routes(foobar)]
pub fn routes() -> reinhardt::UnifiedRouter {
    todo!()
}

fn main() {}
